--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+
+  "scripts": {
+    "start": "node app.js"
+  },
+{
   "dependencies": {
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
